--- a/app/src/main/res/menu/schedule_context_menu.xml
+++ b/app/src/main/res/menu/schedule_context_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:id="@+id/migrate"
-    android:title="Move to Past"/>
+    android:title="Medication Taken"/>
 
     <item android:id="@+id/skip"
-        android:title="Skip"/>
+        android:title="Medication Skipped"/>
 </menu>
