--- a/app/src/main/res/layout/add_medication.xml
+++ b/app/src/main/res/layout/add_medication.xml
@@ -177,104 +177,13 @@
         tools:text="@string/add_reminder" />
 
 
-    <CheckBox
-        android:id="@+id/checkBox_sun"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:button="@null"
-        android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-        android:text="   S"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_mon"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reminder_text" />
-
-    <CheckBox
-        android:id="@+id/checkBox_mon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:button="@null"
-        android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-        android:text="   M"
-        app:layout_constraintBottom_toBottomOf="@+id/checkBox_sun"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_tues"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_sun"
-        app:layout_constraintTop_toTopOf="@+id/checkBox_sun" />
-
-    <CheckBox
-        android:id="@+id/checkBox_tues"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:button="@null"
-        android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-        android:text="   T"
-        app:layout_constraintBottom_toBottomOf="@+id/checkBox_mon"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_wed"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_mon"
-        app:layout_constraintTop_toTopOf="@+id/checkBox_mon" />
-
-    <CheckBox
-        android:id="@+id/checkBox_wed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:button="@null"
-        android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-        android:text="   W"
-        app:layout_constraintBottom_toBottomOf="@+id/checkBox_tues"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_thurs"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_tues"
-        app:layout_constraintTop_toTopOf="@+id/checkBox_tues" />
-
-    <CheckBox
-        android:id="@+id/checkBox_thurs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:button="@null"
-        android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-        android:text="  Th"
-        app:layout_constraintBottom_toBottomOf="@+id/checkBox_wed"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_fri"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_wed"
-        app:layout_constraintTop_toTopOf="@+id/checkBox_wed" />
-
-    <CheckBox
-        android:id="@+id/checkBox_fri"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:button="@null"
-        android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-        android:text="   F"
-        app:layout_constraintBottom_toBottomOf="@+id/checkBox_thurs"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_sat"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_thurs"
-        app:layout_constraintTop_toTopOf="@+id/checkBox_thurs" />
-
-    <CheckBox
-        android:id="@+id/checkBox_sat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:button="@null"
-        android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
-        android:text="   S"
-        app:layout_constraintBottom_toBottomOf="@+id/checkBox_fri"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/checkBox_fri"
-        app:layout_constraintTop_toTopOf="@+id/checkBox_fri" />
-
     <com.dpro.widgets.WeekdaysPicker
         android:id="@+id/weekdays"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/special_instructions_text"
+        android:layout_marginTop="16dp"
         app:highlight_color="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@+id/reminder_text"
         tools:layout_editor_absoluteX="0dp" />
 
     <TextView
@@ -282,14 +191,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:clickable="false"
         android:text="@string/add_special_instructions"
         android:textAlignment="viewStart"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_sun"
+        app:layout_constraintTop_toBottomOf="@+id/weekdays"
         tools:text="@string/add_special_instructions" />
 
     <EditText
@@ -310,7 +219,6 @@
         android:id="@+id/add_medication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:background="@color/colorPrimary"
         android:onClick="onAddMedication"
@@ -318,7 +226,9 @@
         android:paddingEnd="10sp"
         android:text="@string/add_med_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
