Fields in medicineentity made private, getter methods added. Medication info will now use the DAO's update method rather than deleting and inserting. This should preserve order in the listview

--- a/app/src/main/res/layout/medication_info.xml
+++ b/app/src/main/res/layout/medication_info.xml
@@ -216,7 +216,7 @@
 
 
     <Button
-        android:id="@+id/add_medication"
+        android:id="@+id/change_medication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
