--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_add"
-        android:icon="@drawable/ic_fab_add"
+        android:icon="@drawable/ic_action_add"
         android:orderInCategory="1"
         android:title="@string/action_add_medication"
         app:showAsAction="always" />
