--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -3,7 +3,7 @@
 <item
     android:id="@+id/action_search"
     android:orderInCategory="100"
-    android:icon="@drawable/ic_fab_add"
+    android:icon="@drawable/ic_action_add"
     android:title="Search for medication"
     app:showAsAction="always"/>
 </menu>
