--- a/app/src/main/res/layout/activity_medication_info.xml
+++ b/app/src/main/res/layout/activity_medication_info.xml
@@ -26,7 +26,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
         android:text="@string/add_dosage"
         android:textAlignment="viewStart"
         android:textColor="@android:color/black"
@@ -77,32 +76,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/take_with_food_text"
-        app:layout_constraintStart_toEndOf="@+id/take_with_food_text"
-        app:layout_constraintTop_toTopOf="@+id/take_with_food_text" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/take_with_food_text"
+        app:layout_constraintStart_toEndOf="@+id/take_with_food_text" />
 
     <TextView
         android:id="@+id/take_with_water_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_width="129dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="16dp"
         android:text="@string/add_water"
         android:textAlignment="viewStart"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/take_with_food"
-        app:layout_constraintStart_toEndOf="@+id/take_with_food"
-        app:layout_constraintTop_toTopOf="@+id/take_with_food"
+        app:layout_constraintBottom_toTopOf="@+id/frequency_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/take_with_food_text"
+        app:layout_constraintVertical_bias="0.29"
         tools:text="@string/add_water" />
 
     <CheckBox
         android:id="@+id/take_with_water"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/take_with_water_text"
-        app:layout_constraintStart_toEndOf="@+id/take_with_water_text"
-        app:layout_constraintTop_toTopOf="@+id/take_with_water_text" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/take_with_water_text"
+        app:layout_constraintStart_toEndOf="@+id/take_with_water_text" />
 
     <TextView
         android:id="@+id/frequency_text"
@@ -132,35 +129,34 @@
         android:id="@+id/add_time"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="180dp"
         android:background="@drawable/yellow_add"
         android:onClick="addTimes"
-        app:layout_constraintBottom_toBottomOf="@+id/frequency_hour"
         app:layout_constraintStart_toEndOf="@+id/frequency_hour"
-        app:layout_constraintTop_toTopOf="@+id/frequency_hour" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/undo_time"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/trash"
         android:onClick="removeTimes"
-        app:layout_constraintBottom_toBottomOf="@+id/add_time"
-        app:layout_constraintStart_toEndOf="@+id/add_time"
-        app:layout_constraintTop_toTopOf="@+id/add_time" />
+        app:layout_constraintStart_toEndOf="@+id/frequency_hour"
+        app:layout_constraintTop_toBottomOf="@+id/add_time" />
 
     <ListView
         android:id="@+id/times"
         android:layout_width="90dp"
         android:layout_height="80dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/undo_time"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/undo_time"
-        app:layout_constraintTop_toTopOf="@+id/undo_time" />
+        app:layout_constraintTop_toTopOf="@+id/undo_time"
+        app:layout_constraintVertical_bias="0.767" />
 
     <TextView
         android:id="@+id/reminder_text"
