--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -5,41 +5,39 @@
     android:id="@+id/med_card"
     android:layout_width="match_parent"
     android:layout_height="110dp"
-    android:orientation="horizontal"
-    android:background="@drawable/med_card_background">
+    android:background="@drawable/med_card_background"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/pill_image"
         android:layout_width="51dp"
         android:layout_height="57dp"
         android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/pill_bottle"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.333" />
 
     <TextView
         android:id="@+id/med_name"
-        android:layout_width="150dp"
-        android:layout_height="73dp"
+        android:layout_width="332dp"
+        android:layout_height="57dp"
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="52dp"
+        android:gravity="center"
         android:padding="10dp"
+        android:textAlignment="textStart"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/med_time"
-        app:layout_constraintStart_toEndOf="@+id/pill_image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.434" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.112"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/med_time"
